--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>My awesome web page</title>
     </head>
 
-    <h1>helloM\</h1>
+<img src="https://avatars.githubusercontent.com/u/100366193?v=4">
+
     </body>
 </html>
