--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
     <head>
         <title>My awesome web page</title>
     </head>
-
+<ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
 <img src="https://avatars.githubusercontent.com/u/100366193?v=4">
 
     </body>
