--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 <ol>
     <li>This</li>
-    <li>Is an</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <li>Ordered list</li>
 </ol>
 <img src="https://avatars.githubusercontent.com/u/100366193?v=4">
