--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <li>Ordered list</li>
 </ol>
 <img src="https://avatars.githubusercontent.com/u/100366193?v=4">
-
+<link rel="stylesheet" href="style.css">
     </body>
 </html>
